# Shuangshuang

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
data/: hanzi_pairs.txt  hanzi_pairs_stats.txt  output.txt
locales/en/: about.json  context.json  exercise.json  form.json  intro.json
locales/fr/: about.json  context.json  exercise.json  form.json  intro.json
public/: styles.scss
py_scripts/: main.py  pyproject.toml
src/: api.rs  exercise.rs  lib.rs  main.rs  utils.rs
src/components/: context.rs  mod.rs  subtitle_with_helper.rs  test_form.rs  test_session.rs  touch_tone_buttons.rs
src/pages/: home.rs
style/: tailwind.css
