[package]
name = "shuangshuang"
version = "0.1.0"
edition = "2021"
authors = ["Mamosa <matth.more@lilo.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
leptos_i18n = {version = "0.6.0-rc.2", features = ["csr", "cookie", "plurals"]}
leptos-use = "0.15.8"
gloo-net = {version = "0.6.0", features = ["json", "http"]}
gloo-timers = { version = "0.3.0", features = ["futures"] }
send_wrapper = { version = "0.6.0", features = ["futures"] }
thiserror = "2"
urlencoding = "2.1.2"
unicode-segmentation = "1.7.1"
dodo-zh = "0.1.5"
pinyin = "0.10"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Document", "Window", "AbortController", "AbortSignal", "ReadableStream", "Response"] }
wasm-bindgen = "0.2"


# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
