[tool.poetry]
name = "shuangshuang"
version = "0.1.0"
description = "Scripts for editing word lists for shuangshuang"
authors = ["Mamosa <matth.more@lilo.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
